--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <jackson-dataformat-yaml.version>2.12.3</jackson-dataformat-yaml.version>
         <rest-assured.version>5.5.0</rest-assured.version>
         <gson.version>2.11.0</gson.version>
+        <suiteXmlFile>src/test/resources/CrossBrowser.xml</suiteXmlFile>
     </properties>
 
     <dependencyManagement>
@@ -130,6 +131,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+                    </suiteXmlFiles>
                     <argLine>
                         -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
                     </argLine>
